fixed overflow?

--- a/content/projects/neuralNetCode/nn.css
+++ b/content/projects/neuralNetCode/nn.css
@@ -132,7 +132,6 @@ body.dark .trainingImage img{
   height: 100%;
   width: 100%;
   align-items: center;
-  overflow:scroll;
 }
 
 .gaCol.col_1{
